--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -14,7 +14,11 @@ jobs:
     name: 'AWS Infrastructure Deployment'
     runs-on: ubuntu-latest
     
-    
+    permissions:
+      contents: read       
+      id-token: write      
+      pull-requests: write
+      
     env:
       AWS_REGION: ap-southeast-1 
     
