--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -46,6 +46,14 @@ jobs:
         id: init
         run: terraform init
 
+     # Tích hợp Checkov để scan bảo mật
+      - name: Run Checkov security scan
+        uses: bridgecrewio/checkov-action@v12
+        with:
+          directory: .
+          framework: terraform
+          output_format: cli
+
       # Lên kế hoạch triển khai (Plan)
       - name: Terraform Plan
         id: plan
@@ -71,6 +79,5 @@ jobs:
       # appply triển khai (Chỉ chạy khi merge/push lên branch 'main')
       - name: Terraform Apply
         # Chỉ chạy Apply khi là sự kiện Push và trên branch main
-        #if: github.ref == 'refs/heads/main' && #
-        if: github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve tfplan
