--- a/.github/workflows/terraform-ci-cd.yml
+++ b/.github/workflows/terraform-ci-cd.yml
@@ -46,13 +46,13 @@ jobs:
         id: init
         run: terraform init
 
-     # Tích hợp Checkov để scan bảo mật
+          # Tích hợp Checkov Scan
       - name: Run Checkov security scan
         uses: bridgecrewio/checkov-action@v12
         with:
-          directory: .
+          directory: .          # hoặc ./terraform nếu mã của bạn nằm trong thư mục con
           framework: terraform
-          output_format: cli
+          soft_fail: true       # không cho pipeline fail, chỉ cảnh báo
 
       # Lên kế hoạch triển khai (Plan)
       - name: Terraform Plan
